adaptação de jdk 19
Fazendo alterações para rodar com o jdk 19